Whitespace between "page add" and "search input" fix

--- a/sources/stylesheets/editmode.scss
+++ b/sources/stylesheets/editmode.scss
@@ -231,6 +231,7 @@
     position: relative;
     display: inline-block;
     margin-left: 20px;
+    margin-right: 20px;
 
     @include query($tablet-2) {
       position: static;
